--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,53 @@
 */
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
+  --bg-color: #000028;
+  --font-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --main-font: 'IBM Plex mono';
+  --main-font-size: 18px;
+  --header-font-color: #db00ff;
+  background-image: url(../images/cover-image-dark.png);
+}
+
+.page.theme_dark .decorated-zone::before {
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.page.theme_dark .decorated-zone::after {
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+.page.theme_dark .header__theme-menu-button {
+  color: var(--accent-color);
+}
+
+.page.theme_dark .content__title {
+  color: var(--accent-color);
+}
+
+/* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #000028;
+    --font-color: #f1b2ce;
+    --accent-color: #ff0070;
+    --main-font: 'IBM Plex mono';
+    --main-font-size: 18px;
+    --header-font-color: #db00ff;
+  }
+
+  .page {
+    background-image: url(../images/cover-image-dark.png);
+  }
+
+  /* .page .content__title {
+    color: var(--accent-color);
+  } */
 }
