--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,94 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #fff1f7;
+  --font-color: #353430;
+  --accent-color: #ff8dcb;
+  --header-font-color: #ffc2e6;
+  background-image: url(../images/cover-image-light.png);
+}
+
+.page.theme_light .header__decoration {
+  display: none;
+}
+
+.title-decor {
+  color: #000028;
+  background-color: var(--accent-color);
+  font-weight: 700;
+  line-height: 1.3;
+}
+
+.page.theme_light .content__title {
+  color: var(--font-color);
+}
+
+.page.theme_light .header__theme-menu-button {
+  color: var(--font-color);
+}
+
+.page.theme_light
+  .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+  outline: 1px solid rgba(50, 49, 45, 0.4);
+}
+
+.page.theme_light .decorated-zone::before {
+  border-bottom: 1px solid var(--font-color);
+  border-left: 1px solid var(--font-color);
+}
+
+.page.theme_light .decorated-zone::after {
+  border-top: 1px solid var(--font-color);
+  border-right: 1px solid var(--font-color);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #fff1f7;
+    --font-color: #353430;
+    --accent-color: #ff8dcb;
+    --header-font-color: #ffc2e6;
+  }
+
+  .page {
+    background-image: url(../images/cover-image-light.png);
+  }
+
+  .page .header__decoration {
+    display: none;
+  }
+
+  .title-decor {
+    color: #000028;
+    background-color: var(--accent-color);
+    font-weight: 700;
+    line-height: 1.3;
+  }
+
+  .page.content__title {
+    color: var(--font-color);
+  }
+
+  .page .header__theme-menu-button {
+    color: var(--font-color);
+  }
+
+  .page
+    .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+    outline: 1px solid rgba(50, 49, 45, 0.4);
+  }
+
+  .page .decorated-zone::before {
+    border-bottom: 1px solid var(--font-color);
+    border-left: 1px solid var(--font-color);
+  }
+
+  .page .decorated-zone::after {
+    border-top: 1px solid var(--font-color);
+    border-right: 1px solid var(--font-color);
+  }
+
+  .page .content__title {
+    color: var(--font-color);
+  }
 }
