--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,425 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  min-inline-size: 375px;
+  width: 100%;
+  background-color: var(--bg-color, #000028);
+  font-family: var(--main-font, sans-serif);
+  color: var(--font-color, #f1b2ce);
+  font-size: var(--main-font-size, 18px);
+  background-image: url(../images/cover-image-dark.png);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0 auto;
+}
+
+.content-section {
+  padding-inline: 20px;
+}
+
+.header {
+  padding: 20px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  height: 100vh;
+  max-height: 768px;
+  position: relative;
+}
+
+.header__theme-menu {
+  align-self: start;
+  justify-self: center;
+}
+
+.header__theme-menu-list {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.header__theme-menu-button {
+  padding: 0 13px;
+  text-align: center;
+  height: 26px;
+  border: none;
+  background-color: transparent;
+  font-size: var(--main-font-size);
+  font-family: inherit;
+  line-height: 1;
+  color: var(--accent-color);
+  cursor: pointer;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid currentColor;
+}
+
+.header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+  outline: 1px solid rgba(255, 0, 112, 0.4);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid currentColor;
+}
+
+.header__theme-menu-button_active:hover {
+  cursor: default;
+}
+
+.header__title {
+  color: var(--header-font-color);
+  text-shadow: 4px 4px 0px #ff0070;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 0.825;
+  margin-inline-start: -20px;
+}
+
+.title-decor {
+  color: #000028;
+  background-color: var(--accent-color);
+  font-weight: 700;
+  line-height: 1.3;
+}
+
+.header__text {
+  inline-size: 50%;
+  justify-self: end;
+  align-self: center;
+  font-size: inherit;
+}
+
+.header__decoration {
+  position: absolute;
+  top: 20px;
+  right: 48px;
+  color: var(--accent-color);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.39;
+}
+
+.header__decoration-text {
+  position: relative;
+}
+
+.header__decoration-text::after {
+  content: '';
+  position: absolute;
+  inline-size: 9px;
+  block-size: 9px;
+  box-shadow: 0px 0px 8px 3px var(--accent-color);
+  border-radius: 50%;
+  margin-block-start: 8px;
+  inset-block-start: 50%;
+  inset-inline-end: -18px;
+  background-color: var(--accent-color);
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  content: '';
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  inline-size: 25px;
+  block-size: 25px;
+  background-color: transparent;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  inline-size: 25px;
+  block-size: 25px;
+  background-color: transparent;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+/* CONTENT */
+
+.content {
+  margin-block: 60px;
+  font-size: var(--main-font-size);
+}
+
+.content__block {
+  padding-block-end: 80px;
+}
+
+.content__block:nth-child(odd) {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 10px;
+}
+
+.content__title {
+  color: var(--accent-color);
+  font-family: inherit;
+  font-size: var(--main-font-size);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.3;
+  margin-block: 0;
+  margin-block-end: 20px;
+}
+
+.content__block:nth-child(even) .content__title {
+  width: calc((1 / 3) * 100vw - 20px);
+}
+
+.content__articles {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.content__block:nth-child(odd) .content__articles {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.content__block:nth-child(even) .content__articles {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.content__subtitle {
+  font-size: inherit;
+  margin-block: 0 10px;
+}
+
+.content__text {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: 1.3;
+  margin: 0;
+}
+
+.content__link {
+  text-decoration: none;
+  color: inherit;
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+.content__link:hover {
+  border-bottom: 1px solid currentColor;
+  outline-offset: 5px;
+}
+
+.title-decor--accent {
+  font-weight: 400;
+}
+
+.conent__article-subtitle {
+  font-size: inherit;
+  margin-block: 0;
+  display: grid;
+}
+
+.gallery {
+  margin: 0 0 60px;
+}
+
+.gattery__title {
+  margin-block-end: 20px;
+  font-size: var(--main-font-size);
+}
+
+.gallety__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
+}
+
+.gallery__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery__picture {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.gallery__item:nth-child(1) {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+
+.gallery__item:nth-child(2) {
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
+.gallery__item:nth-child(3) {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+
+.gallery__item:nth-child(4) {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.gallery__item:nth-child(5) {
+  grid-column: 2/4;
+  grid-row: 3/4;
+}
+
+.footer {
+  height: 768px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.footer__title {
+  margin-inline-start: 0;
+}
+
+@media (max-width: 768px) {
+  .header {
+    height: 100vh;
+    max-height: 1024px;
+  }
+
+  .header__theme-menu {
+    align-self: center;
+    justify-self: end;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: end;
+  }
+
+  .content__block:nth-child(odd) {
+    gap: 20px;
+  }
+
+  .content__block:nth-child(1n) .content__articles {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .content__articles {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .footer {
+    height: 100vh;
+    max-height: 1024px;
+  }
+}
+
+@media (max-width: 640px) {
+  .header__text {
+    inline-size: 100%;
+  }
+  .content__block:nth-child(1n) {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .content__block:nth-child(1n) .content__articles {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .gattery__title {
+    margin-block-end: 10px;
+  }
+
+  .gallety__list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+
+@media (max-width: 375px) {
+  .header {
+    padding: 10px;
+    height: 100vh;
+    max-height: 668px;
+  }
+
+  .header__title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    margin-inline-start: 0;
+  }
+
+  .decorated-zone::before {
+    left: 10px;
+    bottom: 10px;
+  }
+
+  .decorated-zone::after {
+    right: 10px;
+    top: 10px;
+  }
+
+  .header__decoration {
+    top: 10px;
+    right: 38px;
+  }
+  .content {
+    margin-block: 40px;
+  }
+
+  .content-section {
+    padding-inline: 10px;
+  }
+  .content__block {
+    padding-block-end: 50px;
+  }
+
+  .content__block:nth-child(1n) .content__title {
+    width: 100%;
+    margin-block: 0;
+  }
+
+  .gallery {
+    margin: 0 0 40px;
+  }
+
+  .footer {
+    height: 100vh;
+    max-height: 667px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+  }
 }
