--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,12 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --bg-color: #000028;
+  --font-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --main-font: 'IBM Plex mono';
+  --main-font-size: 18px;
+  --header-font-color: #db00ff;
+}
