--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,10 +4,25 @@
 */
 
 :root {
+  /* --header-title-color: #db00ff;
+  --header-text-color: #000028;
+  --header-accent-color: #ff0070;
+  --header-menu-color: #ff0070;
   --bg-color: #000028;
-  --font-color: #f1b2ce;
+  --main-title-color: #ff0070;
+  --main-font-color: #f1b2ce;
+  --accent-color: #ff0070; */
+
+  --bg-color: #000028;
+  --header-title-color: #db00ff;
+  --header-accent-color: #ff0070;
+  --subtitle-font-color: #000028;
+  --subtitle-background-color: #ff0070;
+  --main-font-color: #f1b2ce;
   --accent-color: #ff0070;
   --main-font: 'IBM Plex mono';
   --main-font-size: 18px;
-  --header-font-color: #db00ff;
+  --btn-hover-color: rgba(255, 0, 112, 0.4);
+  --header-title-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --element-visible: visible;
 }
