--- a/styles/style.css
+++ b/styles/style.css
@@ -110,12 +110,12 @@
 .header__decoration::after {
   content: '';
   position: absolute;
+  top: 8px;
+  right: -18px;
   inline-size: 9px;
   block-size: 9px;
   box-shadow: 0px 0px 4px 2px var(--accent-color);
   border-radius: 50%;
-  margin-block-start: 8px;
-  inset-inline-end: -18px;
   background-color: var(--accent-color);
 }
 
@@ -185,10 +185,6 @@
   list-style: none;
   padding: 0;
   margin: 0;
-}
-
-.section__why .content__articles,
-.section__advices .content__articles {
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -271,7 +267,7 @@
 
 .gallery__picture {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
@@ -350,7 +346,6 @@
   }
 
   .footer {
-    height: 100vh;
     max-height: 1024px;
   }
 }
@@ -360,12 +355,6 @@
     inline-size: 100%;
   }
   .content__block {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  .content__articles {
     display: flex;
     flex-direction: column;
     gap: 20px;
